--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:widget": "vite build --mode widget",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -40,6 +41,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "terser": "^5.44.0",
     "tw-animate-css": "^1.3.7",
     "vite": "^7.1.2"
   }
