--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:widget": "vite build --mode widget",
+    "build:deploy": "npm run build:widget && mkdir -p public && cp dist/chat-widget.iife.js public/chat-widget.iife.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
