--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build:widget",
     "build:widget": "vite build --mode widget",
+    "build:app": "vite build",
     "build:deploy": "npm run build:widget",
     "preview": "vite preview"
   },
